[tool.poetry]
name = "fub"
version = "0.1.0"
description = "Find universal binaries"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
macholib = "^1.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
