[tool.poetry]
name = "fub"
version = "0.1.0"
description = "Find universal binaries"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
macholib = "^1.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
