[project]
name = "fub"
version = "0.1.0"
description = "Find universal binaries"
requires-python = ">=3.13"
dependencies = [
    "macholib>=1.16.4",
]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
